tests/extensions/enhanced_assignments/valid/plusAccumulator.wacc
# Output:
# 69

begin
    int i = 15;
    i += 54;
    println i
end