tests/extensions/enhanced_assignments/syntaxErr/accMinusPlusTypo.wacc
begin
    i -+= 7
end